[package]
name = "diesel_test_setup"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["database", "development-tools::testing"]
keywords = ["diesel", "integration", "testing"]


[dependencies]
migrations_internals = "1.4.0"
lazy_static = "1.3.0"
diesel = { version = "1.4.2", features = ["r2d2"] }
nanoid = "0.2.0"

[dev-dependencies]
# Postgres is required for tests, but not for the library itself
diesel = { version = "1.4.2", features = ["postgres", "mysql", "r2d2"] }


[badges]
maintenance = { status = "passively-maintained" }
